Hacky. Ran into issues with flyway migration on pg9.6 so disabled it here. To run, from target/ java -cp mirrorNode.jar:lib com.hedera.balanceFileLogger.BalanceFileLoggerPerformanceTest 100000